--- a/MidiToWav/MidiToWav.csproj
+++ b/MidiToWav/MidiToWav.csproj
@@ -45,6 +45,7 @@
     <Compile Include="src\MidiStream.cs" />
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\_Enums.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
